CHANNELMGR-555 - Fix OverlaySync render issues
- make OverlaySyncService aware of the viewport width (previously
done by ScalingService)
- ensure constrained viewPortWidth is respected when a vertical
scrollbar is rendered. Previously, the constraint views would simply
 be 15px (scroll bar width) less wide.
- sync the iframe after the Scaling animation is done
- check if the Scaling animation caused a scroll bar to (dis)
appear. If so, do another Scaling animation to make sure the UI is
 correct.
- If the site's min-width is greater than the viewPortWidth (like
Gogreen1) make sure a horizontal scrollbar is drawn. Also make sure
the iframe element provides a bit of extra height so the scrollbar
does not cover up vertical pixels.

- rename JQuery variables from 'baseJQueryElement' to '$base', etc

--- a/channel-manager/frontend-ng/src/styles/_iframe.scss
+++ b/channel-manager/frontend-ng/src/styles/_iframe.scss
@@ -17,7 +17,6 @@
 
   iframe {
     border: 0;
-    box-shadow: 0 0 20px $black-shadow;
   }
 }
 
@@ -25,9 +24,13 @@
   user-select: none;
 }
 
-.channel-iframe-scroll {
-  position: relative;
-  overflow-x: auto;
+.channel-iframe-sheet {
   background-color: $scroll-bgcolor;
+}
+
+.channel-iframe-scroll-x {
+  position: relative;
+  overflow-x: visible;
+  overflow-y: hidden;
   box-shadow: 0 0 20px $black-shadow;
 }
